freebsd-buildutils (10.3~svn295289-1) UNRELEASED; urgency=medium

  * New upstream snapshot of 10.3-BETA1

 -- Steven Chamberlain <steven@pyro.eu.org>  Sat, 06 Feb 2016 22:50:09 +0000

freebsd-buildutils (10.2-2) experimental; urgency=medium

  * arch=all autobuilding doesn't seem to work for this yet

 -- Christoph Egger <christoph@debian.org>  Wed, 21 Oct 2015 14:28:20 +0200

freebsd-buildutils (10.2-1) experimental; urgency=medium

  * Update to 10.2 source
  * refresh patches
    * drop mk_ncp.diff -- was a workaround for kfreebsd-9
    * drop mk_hyperv.diff and mk_tests.diff now upstream
  * Compress orig-source with xz

 -- Christoph Egger <christoph@debian.org>  Wed, 21 Oct 2015 12:10:45 +0200

freebsd-buildutils (10.0-7) unstable; urgency=medium

  * Cherry-pick r276494 from HEAD:
    Don't include bsd.sys.mk within bsd.kmod.mk
  * binary-indep target requires binary-arch to run first.

 -- Steven Chamberlain <steven@pyro.eu.org>  Wed, 08 Jul 2015 16:44:07 +0100

freebsd-buildutils (10.0-6) experimental; urgency=medium

  * Raise Build-Depends on freebsd-glue to >= 0.2.20~, to not be
    affected by #759249 if the installed libbsd-dev is newer
  * Do not use -fstack-protector on alpha

 -- Steven Chamberlain <steven@pyro.eu.org>  Tue, 21 Oct 2014 22:50:38 +0100

freebsd-buildutils (10.0-5) unstable; urgency=medium

  [ Petr Salinger ]
  * Backport mk_hyperv, needed by 10.1 RC

  [ Steven Chamberlain ]
  * backports MK_TESTS for freebsd-utils (>> 10.1~)
  * Do not use -fstack-protector on hppa/parisc arch (thanks, Helge
    Deller) (Closes: #758377)
  * In get-orig-source, svn export with --ignore-keywords so that
    revision tags do not fuzzy the patches
  * Add myself to Uploaders

 -- Petr Salinger <Petr.Salinger@seznam.cz>  Sat, 04 Oct 2014 18:16:23 +0200

freebsd-buildutils (10.0-4) unstable; urgency=low

  * Add MK_EISA.

 -- Robert Millan <rmh@debian.org>  Sun, 04 May 2014 14:15:29 +0200

freebsd-buildutils (10.0-3) unstable; urgency=low
